--- a/static/oidc/discover-provider.html
+++ b/static/oidc/discover-provider.html
@@ -10,11 +10,11 @@
 <body>
 <div class="container">
   <div>
-    <h2>Sign In</h2>
+    <h2>Sign In - Discover Provider</h2>
   </div>
 </div>
 <div class="container">
-  <form method="post" action="/api/accounts/signin">
+  <form method="post" action="/api/accounts/discover">
     <div class="form-group">
       <label for="webid">WebID or server URL:</label>
       <input type="text" class="form-control" name="webid" id="webid" placeholder="databox.me" />
